--- a/inventory.ini
+++ b/inventory.ini
@@ -6,6 +6,7 @@ windows
 ws1 ansible_host=192.168.38.11 ansible_user=vagrant ansible_password=vagrant
 ws2 ansible_host=192.168.38.12 ansible_user=vagrant ansible_password=vagrant
 ws3 ansible_host=192.168.38.13 ansible_user=vagrant ansible_password=vagrant
+ws4 ansible_host=192.168.38.14 ansible_user=vagrant ansible_password=vagrant
 
 [windows]
 win_11 ansible_host=192.168.38.130 ansible_user=client1 ansible_password=xiangling
