--- a/playbooks/deployment_linux.yml
+++ b/playbooks/deployment_linux.yml
@@ -7,6 +7,8 @@
     - scan_directory: /
     - download_url: http://192.168.38.174:8000
     - splunk_ip: 192.168.38.174:9997
+    - username: "linux_user"
+    - password: "ThisIsTheLinuxPassword?"
   tasks:
     - name: Update packages list
       shell: sudo apt update
