--- a/playbooks/deployment_win.yml
+++ b/playbooks/deployment_win.yml
@@ -3,64 +3,86 @@
   hosts: windows  
   tasks:
   - name: Creating ansible_temp directory
+    ignore_errors: True
     ansible.windows.win_file:
       path: c:\Users\Administrator\ansible_temp
       state: directory
+    tags: system
 
   - name: Download files from Custom Server
+    ignore_errors: True
     ansible.windows.win_command: "curl.exe http://100.90.131.12:8000/deployment_folder.zip --output C:\\Users\\Administrator\\ansible_temp\\deployment_files.zip"
+    tags: system
 
   - name: Disabling UAC for Admin
+    ignore_errors: True
     ansible.windows.win_command: REG ADD "HKLM\SOFTWARE\Microsoft\Windows\CurrentVersion\Policies\System" /v ConsentPromptBehaviorAdmin /t REG_DWORD /d 0 /f
+    tags: system
     
   - name: Unzipping files
+    ignore_errors: True
     ansible.windows.win_command: tar -xf C:/Users/Administrator/ansible_temp/deployment_files.zip -C C:/Users/Administrator/ansible_temp/
+    tags: system
 
   - name: Installing SysMon
+    ignore_errors: True
     ansible.windows.win_command: C:/Users/Administrator/ansible_temp/deployment_files/sysmon/sysmon64.exe -accepteula -i C:/Users/Administrator/ansible_temp/deployment_files/sysmon/sysmonconfig_XLS.xml
+    tags: sysmon
 
   - name: install splunkforwarder msi
     ignore_errors: True
     ansible.windows.win_package: 
       path: C:\Users\Administrator\ansible_temp\deployment_files\splunk\splunkforwarder-9.0.3-dd0128b1f8cd-x64-release.msi
-      arguments: RECEIVING_INDEXER="34.243.232.156:9997" SPLUNKPASSWORD=P@ssw0rd123  AGREETOLICENSE=Yes /quiet    
+      arguments: RECEIVING_INDEXER="34.243.232.156:9997" SPLUNKPASSWORD=P@ssw0rd123  AGREETOLICENSE=Yes /quiet
+    tags: splunk
 
   - name: Copy inputs conf to windows
     ignore_errors: True
     template:
       src: /home/ubuntu/Desktop/xls23/inputs.conf.j2
       dest: c:\Program Files\SplunkUniversalForwarder\etc\system\local\inputs.conf
+    tags: splunk
     
   - name: Restart splunk service
     ignore_errors: True
     win_service:
       name: SplunkForwarder Service
-      state: restarted   
+      state: restarted
+    tags: splunk
     
-    2nd Change since SEP will restart the machine
+    # 2nd Change since SEP will restart the machine
   - name: Restart a service
     ignore_errors: True
     win_service:
       name: SplunkForwarder Service
       state: restarted
+    tags: splunk
     
   - name: Installing Carbon Black
     ignore_errors: True
     ansible.windows.win_package:
       path: C:/Users/Administrator/ansible_temp/deployment_files/CB/CarbonBlackClientSetup.exe
       arguments: /S
+    tags: carbonblack
 
   - name: Installing Symantec Endpoint Protection
+    ignore_errors: True
     ansible.windows.win_package:
       path: C:/Users/Administrator/ansible_temp/deployment_files/setup.exe
+    tags: sep
   
   - name: Enabling UAC for Admin
+    ignore_errors: True
     ansible.windows.win_command: REG ADD "HKLM\SOFTWARE\Microsoft\Windows\CurrentVersion\Policies\System" /v ConsentPromptBehaviorAdmin /t REG_DWORD /d 1 /f
+    tags: system
   
   - name: Removing ansible_temp directory
+    ignore_errors: True
     ansible.windows.win_file:
       path: c:\Users\Administrator\ansible_temp
       state: absent
+    tags: system
 
   - name: Reboot the machine with all defaults
-    ansible.windows.win_reboot:
+    ansible.windows.win_command: "shutdown -r -t 0"
+    tags: system
