fix Carbon Black check

--- a/playbooks/deployment_linux.yml
+++ b/playbooks/deployment_linux.yml
@@ -150,7 +150,7 @@
 
     - name: Check if Carbon Black exists
       stat:
-        path: /opt/splunkforwarder
+        path: /var/opt/carbonblack
       register: cb_stat
       tags: carbonblack
 
