test: add windows machine

--- a/inventory.ini
+++ b/inventory.ini
@@ -10,6 +10,7 @@ ws4 ansible_host=192.168.13.201 ansible_user=vagrant ansible_password=vagrant
 
 [windows]
 win_11 ansible_host=192.168.38.130 ansible_user=client1 ansible_password=xiangling
+asd_ws101 ansible_host=192.168.3.96
 
 [windows:vars]
 ansible_shell_type=powershell 
