--- a/playbooks/deployment_linux.yml
+++ b/playbooks/deployment_linux.yml
@@ -138,6 +138,11 @@
       ansible.builtin.shell: "sudo /opt/splunkforwarder/bin/splunk add monitor /var/log -index {{inventory_hostname.split('_')[0]}} -auth admin:P@ssw0rd"
       tags: splunk
 
+    - name: Add files to monitor
+      ignore_errors: True
+      ansible.builtin.shell: "sudo /opt/splunkforwarder/bin/splunk add monitor /opt/UERANSIM/log -index {{inventory_hostname.split('_')[0]}} -auth admin:P@ssw0rd"
+      tags: splunk
+
     - name: start splunk
       ansible.builtin.shell: sudo /opt/splunkforwarder/bin/splunk restart
       tags: splunk
@@ -213,18 +218,10 @@
 
     - name: Copy SSH key 2
       ansible.posix.authorized_key:
-        user: root
+        user: linux_user
         path: /etc/ssh/linux_user/authorized_keys
         state: present
         key: "{{ lookup('file', 'keys/id_rsa.pub') }}"
-      tags: harden
-
-    - name: Chown /etc/ssh/linux_user directory
-      ansible.builtin.file:
-        path: /etc/ssh/linux_user
-        recurse: true
-        owner: 'linux_user'
-        group: 'linux_user'
       tags: harden
 
     - name: Log SSH connections
