--- a/inventory.ini
+++ b/inventory.ini
@@ -1,3 +1,11 @@
+[windows]
+windows_server
+windows_client
+
+[windows:vars]
+ansible_user=admin
+ansible_password=Admin1Admin1
+
 [windows_server]
 bt_baf_dmz_adfs-baf ansible_host=100.97.6.6 # bt_baf_dmz OS:windows_server_2022
 bt_beg_conf_ca01-beg-conf ansible_host=10.6.6.3 # bt_beg_conf OS:windows_server_2022
@@ -53,6 +61,15 @@ bt_sinet_ws2-m365 ansible_host=100.96.0.82 # bt_sinet OS:windows_10_21h1
 bt_sinet_ws3-m365 ansible_host=100.96.0.109 # bt_sinet OS:windows_10_21h1
 bt_sinet_ws4-m365 ansible_host=100.96.0.136 # bt_sinet OS:windows_10_21h1
 bt_sinet_ws5-m365 ansible_host=100.96.0.163 # bt_sinet OS:windows_10_21h1
+
+[linux]
+linux_server
+linux_client
+
+[linux:vars]
+ansible_user=root
+ansible_password=Admin1Admin1
+
 [linux_server]
 bt_baf_5g_core_5g-amf ansible_host=10.6.11.25 # bt_baf_5g_core OS:ubuntu_22_04
 bt_baf_5g_core_5g-ausf ansible_host=10.6.11.24 # bt_baf_5g_core OS:ubuntu_22_04
