--- a/inventory.ini
+++ b/inventory.ini
@@ -1,4 +1,4 @@
-[windows]
+[windows:children]
 windows_server
 windows_client
 
@@ -62,7 +62,7 @@ bt_sinet_ws3-m365 ansible_host=100.96.0.109 # bt_sinet OS:windows_10_21h1
 bt_sinet_ws4-m365 ansible_host=100.96.0.136 # bt_sinet OS:windows_10_21h1
 bt_sinet_ws5-m365 ansible_host=100.96.0.163 # bt_sinet OS:windows_10_21h1
 
-[linux]
+[linux:children]
 linux_server
 linux_client
 
