refactor: add ansible_user variable

--- a/inventory.ini
+++ b/inventory.ini
@@ -3,7 +3,7 @@ windows_server
 windows_client
 
 [windows:vars]
-ansible_user=admin
+ansible_user=administrator
 ansible_password=Admin1Admin1
 
 [windows_server]
