rename and added become

--- a/playbooks/command_linux.yml
+++ b/playbooks/command_linux.yml
@@ -2,6 +2,7 @@
 - name: Run Linux Command
   hosts: linux
   gather_facts: False
+  become: True
   tasks:
     - ansible.builtin.shell: "{{ cmd }}"
       register: out
