--- a/inventory.ini
+++ b/inventory.ini
@@ -123,7 +123,7 @@ bt-beg-dmz_k8s-worker_01 ansible_host=2a07:1182:6::31 os=ubuntu_20_04 fqdn=k8s-w
 bt-beg-dmz_k8s-worker_02 ansible_host=2a07:1182:6::32 os=ubuntu_20_04 fqdn=k8s-worker02.beg.06.berylia.org # bt_beg_dmz
 bt-beg-dmz_k8s-worker_03 ansible_host=2a07:1182:6::33 os=ubuntu_20_04 fqdn=k8s-worker03.beg.06.berylia.org # bt_beg_dmz
 bt-baf-dmz_lims ansible_host=2a07:1182:6:1000::11 os=ubuntu_20_04 fqdn=lims.baf.06.berylia.org # bt_baf_dmz
-bt-bob-dmz_loans ansible_host=2a07:1182:6:2000::20 os=ubuntu_22_04 fqdn=loans.bob.06.berylia.org # bt_bob_dmz
+bt-bob-dmz_loans ansible_host=2a07:1182:6:2000::20 os=ubuntu_22_04 fqdn=loans.bob.06.berylia.org ansible_user=linux_user ansible_password=ThisIsTheLinuxPassword? # bt_bob_dmz
 bt-beg-dmz_maintenance ansible_host=2a07:1182:6::80 os=ubuntu_22_04 fqdn=maintenance.beg.06.berylia.org # bt_beg_dmz
 bt-baf-ads_map-ads ansible_host=2a07:1182:6:1004::34 os=almalinux8 fqdn=map-ads.baf.06.berylia.org # bt_baf_ads
 bt-baf-int_mcs ansible_host=2a07:1182:6:1001::50 os=ubuntu_22_04 fqdn=mcs.int.baf.06.berylia.org # bt_baf_int
