refactor: update inventory.ini

--- a/scripts/inventory-generator/inventory.ini
+++ b/scripts/inventory-generator/inventory.ini
@@ -88,7 +88,7 @@ bt-baf-5g-core_5g-upf-core ansible_host=2a07:1182:6:1002::110 os=ubuntu_22_04 fq
 bt-baf-5g-core_5g-webui ansible_host=2a07:1182:6:1002::100 os=ubuntu_22_04 fqdn=5g-webui.sac.baf.06.berylia.org ansible_password=EnableCast9 # bt_baf_5g_core
 bt-bob-rms_app-ng ansible_host=2a07:1182:6:2002::100 os=ubuntu_22_04 fqdn=app-ng.bob.06.berylia.org ansible_password=IeeeChevy6 # bt_bob_rms
 bt-mon_arkime ansible_host=10.6.59.22 os=ubuntu_22_04 fqdn=arkime.06.berylia.org ansible_password=PurpleHeight4 # bt_mon
-bt-bob-rms_auth-ng ansible_host=2a07:1182:6:2002::103 os=ubuntu_22_04 fqdn=auth-ng.bob.06.berylia.org ansible_password=Root still usable # bt_bob_rms
+bt-bob-rms_auth-ng ansible_host=2a07:1182:6:2002::103 os=ubuntu_22_04 fqdn=auth-ng.bob.06.berylia.org # bt_bob_rms
 bt-baf-dmz_av ansible_host=2a07:1182:6:1000::10 os=ubuntu_20_04 fqdn=av.baf.06.berylia.org # bt_baf_dmz
 bt-baf-bg_bg-gsc ansible_host=2a07:1182:6:1100::fe os=ubuntu_22_04 fqdn=bg-gsc.int.baf.06.berylia.org ansible_password=BeingsActor5 # bt_baf_bg
 bt-baf-dmz_borderguard ansible_host=2a07:1182:6:1000::17 os=ubuntu_20_04 fqdn=borderguard.baf.06.berylia.org # bt_baf_dmz
@@ -110,7 +110,7 @@ bt-bob-isp1_fw2-bob ansible_host=2a07:1182:6:2ffe::51 os=fortigate fqdn=fw2-bob.
 bt-beg-gas_gas-historian ansible_host=2a07:1182:6:24::100 os=ubuntu_20_04 fqdn=gas-historian.gas.beg.06.berylia.org ansible_password=SurfDental8 # bt_beg_gas
 bt-beg-gas_gas-ot-detector ansible_host=2a07:1182:6:24::201 os=ubuntu_20_04 fqdn=gas-ot-detector.gas.beg.06.berylia.org ansible_password=FeelTitten6 # bt_beg_gas
 bt-bob-dmz_helpdesk ansible_host=2a07:1182:6:2000::13 os=ubuntu_22_04 fqdn=helpdesk.bob.06.berylia.org # bt_bob_dmz
-bt-bob-dmz_hermes-ng ansible_host=2a07:1182:6:2000::27 os=ubuntu_22_04 fqdn=hermes-ng.bob.06.berylia.org ansible_password=Root still usable # bt_bob_dmz
+bt-bob-dmz_hermes-ng ansible_host=2a07:1182:6:2000::27 os=ubuntu_22_04 fqdn=hermes-ng.bob.06.berylia.org # bt_bob_dmz
 bt-baf-int_hq-gsc ansible_host=2a07:1182:6:1001::51 os=ubuntu_22_04 fqdn=hq-gsc.int.baf.06.berylia.org ansible_password=ButtReason2 # bt_baf_int
 bt-beg-dmz_institute ansible_host=2a07:1182:6::26 os=ubuntu_22_04 fqdn=institute.beg.06.berylia.org # bt_beg_dmz
 bt-beg-dmz_inventory ansible_host=2a07:1182:6::4 os=ubuntu_22_04 fqdn=inventory.beg.06.berylia.org # bt_beg_dmz
